# RAG-Database-chatbot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
app/: __init__.py  config.py  database.py  fixtures.py  routes.py  state.py
app/core/: __init__.py  embeddings.py  qa_chain.py
app/static/: style.css
app/templates/: index.html
